Update pom and README

--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <version>1.0.0-SNAPSHOT</version>
 
 	<name>sciview-vistools</name>
-	<description>This is a minimal SciView project.</description>
+	<description>Tools to support quick 3D visualization with SciView in other projects.</description>
 	<url>http://sc.iview.sc/</url>
-	<inceptionYear>2018</inceptionYear>
+	<inceptionYear>2020</inceptionYear>
 	<organization>
 		<name>graphics.scenery</name>
 		<url>http://scenery.graphics/</url>
@@ -47,9 +47,9 @@
 	</developers>
 	<contributors>
 		<contributor>
-			<name>Curtis Rueden</name>
-			<url>http://imagej.net/User:ctrueden</url>
-			<properties><id>ctrueden</id></properties>
+			<name>k</name>
+			<url>http://imagej.net/User:kephale</url>
+			<properties><id>kephale</id></properties>
 		</contributor>
 	</contributors>
 
@@ -61,29 +61,29 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/scenerygraphics/minimal-sciview-example-project</connection>
-		<developerConnection>scm:git:git@github.com:scenerygraphics/minimal-sciview-example-project</developerConnection>
+		<connection>scm:git:git://github.com/kephale/sciview-vistools</connection>
+		<developerConnection>scm:git:git@github.com:kephale/sciview-vistools</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/scenerygraphics/minimal-sciview-example-project</url>
+		<url>https://github.com/kephale/sciview-vistools</url>
 	</scm>
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/scenerygraphics/minimal-sciview-example-project/issues</url>
+		<url>https://github.com/kephale/sciview-vistools/issues</url>
 	</issueManagement>
 	<ciManagement>
 		<system>Travis CI</system>
-		<url>https://travis-ci.org/scenerygraphics/minimal-sciview-example-project</url>
+		<url>https://travis-ci.org/kephale/sciview-vistools</url>
 	</ciManagement>
 
 	<properties>
-		<main-class>sc.iview.minimal.Main</main-class>
-		<package-name>net.imagej</package-name>
+		<main-class>sc.iview.Main</main-class>
+		<package-name>sc.iview</package-name>
 
 		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>Board of Regents of the University of Idaho.</license.copyrightOwners>
 		<license.projectName>Minimal sciview.</license.projectName>
 
-		<sciview.version>4d82499</sciview.version>
+		<sciview.version>1cf7244</sciview.version>
 		<scenery.version>cdfce26</scenery.version>
 		<joml.version>1.9.22</joml.version>
 		<kotlin.version>1.4-M1</kotlin.version>
